# BSDiff

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zbj/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  native-lib.cpp
app/src/main/java/com/zbj/bsdiff/: MainActivity.java  UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zbj/bsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
